# poker

./: .gitignore  LICENSE  Notes.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: pages.yml  release.yml
js/: app.js  gameState.js  gto.js  storage.js  ui.js
poker-core/: Cargo.toml
poker-core/src/: lib.rs
scripts/: engine_test.ts  hh_test.ts  leaks_test.ts  multiway_test.ts  puzzles_test.ts  sim_test.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Logo.tsx
src/components/coach/: EVCoachPanel.tsx  RangeViewModal.tsx
src/components/drills/: DrillControls.tsx  DrillTable.tsx  MoveNavigator.tsx
src/components/play/: HandReplayModal.tsx  ResultOverlay.tsx  SessionSummaryModal.tsx  SideRail.tsx
src/components/range/: GuessModal.tsx  RangeMatrix.tsx
src/components/stats/: charts.tsx
src/components/study/: Drills.tsx  (+9 more)
src/db/: stats.ts
src/engine/: cards.ts  engineClient.ts  equity.ts  evaluator.ts  notation.ts  puzzles.ts  ranges.ts
src/game/: archetypes.ts  botBrain.ts  engine.ts  handHistory.ts
src/lib/: cx.ts  exportFile.ts  format.ts  leaks.ts  openExternal.ts  store.ts
src/store/: drillStore.ts  gameStore.ts  leakStore.ts  statsStore.ts  studyStore.ts  themeStore.ts
src/styles/: tokens.css
src/types/: poker.ts
src/views/: AboutView.tsx  DrillsView.tsx  PlayView.tsx  StatsView.tsx  StudyView.tsx
styles/: main.css
(+12 files in other folders)
