[package]
name = "all-in"
version = "1.0.0"
description = "All-In — Poker Dojo"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "all_in_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
poker-core = { path = "../poker-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
